ADD FOCUSED BUTTONS WITH JS AND CSS

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <div class="container-viajes">
             <div class="container-tipos-viaje">
-              <button>One way</button>
+              <button class="active">One way</button>
               <button>Round trip</button>
               <button>Multi-city</button>
             </div>
